# lankamind

./: .gitignore  Dockerfile  LICENSE  MOBILE_SETUP.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  server.py
api/static/: index.html  manifest.json
cli/: __init__.py  client.py  main.py
core/: __init__.py  auto_worker.py  model_shard.py  pipeline.py  quantization.py  worker.py
docs/: architecture.md  phase1-notes.md  phases.md
monitoring/: prometheus.yml
network/: __init__.py  bootstrap.py  coordinator.py  discovery.py  keypair.py  node.py
orchestrator/: __init__.py  gateway.py  health_checker.py  load_balancer.py  registry.py  scheduler.py
scripts/: launch_all.py  launch_bootstrap.py  launch_gateway.py  launch_workers.py  run_demo.py  stop_workers.py
tests/: test_auto_worker.py  test_coordinator.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py  test_discovery.py  test_keypair.py  test_ledger.py  test_model_shard.py  test_network_setup.py  test_pipeline.py  test_registry.py  test_reputation.py  test_scheduler.py  test_secure_transport.py  test_zmq_transport.py
transport/: __init__.py  libp2p_transport.py  secure_transport.py  zmq_transport.py
trust/: __init__.py  ledger.py  reputation.py  verifier.py
